syntax = "proto3";

option go_package = "proto/";
package proto;

service ManagerService {
  rpc Write(WriteRequest) returns (WriteResponse) {}
  rpc WriteConfirmation(WriteConfirmationRequest) returns (Empty) {}

  rpc Read(ReadRequest) returns (Empty) {}
  rpc ReadConfirmation(ReadConfirmationRequest) returns (Empty) {}


}

message ReadRequest {
  string page = 1;
  int64 source = 2;
}

message ReadConfirmationRequest {
  string page = 1;
  int64 source = 3;
}


message WriteConfirmationRequest {
  string page = 1;
  string content = 2;
  int64 source = 3;
}

message WriteRequest {
  string page = 1;
  int64 source = 2;
}

message WriteResponse {
  bool toWrite = 1;
}

message Empty {
}

